# sero-test-todos

./: .gitignore  .sero-workspace.json  ANALYSIS.md  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_CHECKLIST.md  PROJECT_STATUS.txt  README.md  TESTING.md  dev.sh  package-lock.json  package.json  playwright.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  .gitignore  API_PROVIDERS.md  ARCHITECTURE.md  DIRECTORY_STRUCTURE.txt  QUICKSTART.md  README.md  SETUP_SUMMARY.md  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  test_imports.py
backend/models/: __init__.py  base.py  fundamental.py  market.py
backend/routers/: __init__.py  health.py  historical.py  quotes.py  screener.py  websocket.py
backend/services/: README.md  __init__.py  base.py  coingecko_service.py  finnhub_service.py  fmp_service.py  yfinance_service.py
backend/tests/: __init__.py  conftest.py  test_base_service.py  test_cache_manager.py  test_coingecko_service.py  test_finnhub_service.py  test_fmp_service.py  test_health_endpoints.py  test_historical_router.py  test_integration_extra.py  test_models.py  test_quotes_router.py  test_rate_limiter.py  test_screener_router.py  test_websocket_router.py  test_yfinance_service.py
backend/utils/: __init__.py  cache.py  logger.py  rate_limiter.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
src/: App.tsx
(+18 files in other folders)
