[project]
name = "market-monitor-backend"
version = "0.1.0"
description = "FastAPI backend for personal finance/trading research app"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "httpx==0.26.0",
    "websockets==12.0",
    "python-dotenv==1.0.0",
    "pandas==2.2.0",
    "yfinance==0.2.36",
    "cachetools==5.3.2",
    "limits==3.7.0",
    "structlog==24.1.0",
    "python-jose[cryptography]==3.3.0",
    "python-dateutil==2.8.2",
    "pytz==2024.1",
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "httpx==0.26.0",
    "black==24.1.1",
    "ruff==0.1.14",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
